--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
     "name": "node-global-key-listener-extended",
     "version": "0.3.3",
     "description": "A module to listen to global key events",
-    "types": "build/index.d.ts",
-    "main": "build/index.js",
+    "types": "dist/index.d.ts",
+    "main": "dist/index.js",
+    "gypfile": true,
     "files": [
-        "bin/**/*",
-        "build/**/*"
+        "build/Release/addon.node",
+        "dist/**/*"
     ],
     "scripts": {
         "watch": "tsc -w",
-        "build": "tsc",
-        "test": "node build/test.js",
-        "compile-win": ".\\scripts\\compile-win.bat",
-        "compile-mac": "swiftc src/bin/MacKeyServer/main.swift -o bin/MacKeyServer",
-        "compile-x11": "scripts/compile-x11.sh"
+        "build": "npm run clean && npm run compile-addon && tsc && echo. && echo --- Build output --- && dir /s dist",
+        "test": "node test-native.js",
+        "compile-addon": "node-gyp rebuild",
+        "clean": "rimraf build dist"
     },
     "repository": {
         "type": "git",
@@ -34,12 +34,15 @@
     "homepage": "https://github.com/LaunchMenu/node-global-key-listener#readme",
     "devDependencies": {
         "@types/node": "^14.14.37",
+        "node-gyp": "^11.4.1",
+        "rimraf": "^5.0.7",
         "typescript": "^4.2.3"
     },
     "publishConfig": {
         "access": "public"
     },
     "dependencies": {
+        "node-addon-api": "^8.5.0",
         "sudo-prompt": "^9.2.1"
     }
 }
