--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "moduleResolution": "node",
         "rootDir": "src/",
-        "outDir": "build/",
+        "outDir": "dist/",
         "inlineSourceMap": true,
         "declaration": true,
         "declarationMap": true,
@@ -18,5 +18,6 @@
         "incremental": true
     },
     "types": ["node"],
+    "include": ["src/**/*"],
     "exclude": ["node_modules", "**/node_modules/*", "build", "trash"]
 }
