--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
     "name": "node-global-key-listener-extended",
-    "version": "0.3.3",
+    "version": "0.4.1",
     "description": "A module to listen to global key events",
     "types": "dist/index.d.ts",
     "main": "dist/index.js",
     "gypfile": true,
     "files": [
-        "build/Release/addon.node",
-        "dist/**/*"
+        "dist"
     ],
     "scripts": {
         "watch": "tsc -w",
-        "build": "npm run clean && npm run compile-addon && tsc && echo. && echo --- Build output --- && dir /s dist",
+        "build": "npm run clean && npm run compile-addon && tsc && copyfiles -u 2 \"build/Release/addon.node\" dist",
         "test": "node test-native.js",
         "compile-addon": "node-gyp rebuild",
         "clean": "rimraf build dist"
@@ -34,6 +33,7 @@
     "homepage": "https://github.com/LaunchMenu/node-global-key-listener#readme",
     "devDependencies": {
         "@types/node": "^14.14.37",
+        "copyfiles": "^2.4.1",
         "node-gyp": "^11.4.1",
         "rimraf": "^5.0.7",
         "typescript": "^4.2.3"
