feat: 배포 쿠조 전환 - 패키징 바이너리 제외, 설치 시 빌드되게 세팅

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,9 @@ typings/
 
 
 eslintLog.tap
+
+# Native addon packaging
+# Exclude build outputs and local binaries (keep dist for runtime JS)
+build/
+bin/
+.research/
